crates/parser/src/tests/snapshots/if_bool_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 205
expression: "(test[1], ast, ast_string)"
---
- "if false { foo } else { bar }"
- Ok:
    nodes:
      - Expr:
          Cond:
            cond_expr:
              Expr:
                Lit:
                  value:
                    Bool: false
                  ty: ~
            then_block:
              Expr:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: foo
                          ty: ~
                  ty: ~
            else_block:
              Expr:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: bar
                          ty: ~
                  ty: ~
            ty: ~
- "(if false '(foo) '(bar))"

