crates/parser/src/tests/snapshots/if_else.snap
---
source: crates/parser/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "\nif a > b {\n    foo\n} else {\n    bar\n}"
- Ok:
    nodes:
      - Expr:
          Cond:
            cond_expr:
              Expr:
                BinOp:
                  op: Gt
                  lhs:
                    Expr:
                      Ident:
                        name: a
                  rhs:
                    Expr:
                      Ident:
                        name: b
            then_block:
              Expr:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: foo
            else_block:
              Expr:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: bar
- "(if (> a b) '(foo) '(bar))"

