crates/parser/src/tests/snapshots/if_then_else_if_else.snap
---
source: crates/parser/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "\nif a > b {\n    foo\n} else if c < a {\n    bar\n} else {\n    baz\n}\n"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                BinOp:
                  op: Gt
                  lhs:
                    kind:
                      Ident:
                        name: a
                  rhs:
                    kind:
                      Ident:
                        name: b
            then_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: foo
            else_block:
              kind:
                Block:
                  list:
                    - kind:
                        Cond:
                          cond_expr:
                            kind:
                              BinOp:
                                op: Lt
                                lhs:
                                  kind:
                                    Ident:
                                      name: c
                                rhs:
                                  kind:
                                    Ident:
                                      name: a
                          then_block:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Ident:
                                        name: bar
                          else_block:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Ident:
                                        name: baz
- "(if (> a b) '(foo) '((if (< c a) '(bar) '(baz))))"

