crates/parser/src/tests/snapshots/let_basic_float.snap
---
source: crates/parser/src/tests.rs
assertion_line: 225
expression: "(test[1], ast, ast_string)"
---
- "let x: float = 1.0"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn: Float
            init:
              kind:
                Lit:
                  value:
                    Float: 1.0
- "(let x:float 1)"

