crates/parser/src/tests/snapshots/op_prec_left_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 251
expression: "(test[1], ast, ast_string)"
---
- 19 + 21 * 40
- Ok:
    nodes:
      - BinOp:
          op: Add
          lhs:
            Lit:
              value:
                UInt64: 19
          rhs:
            BinOp:
              op: Mul
              lhs:
                Lit:
                  value:
                    UInt64: 21
              rhs:
                Lit:
                  value:
                    UInt64: 40
- (+ 19 (* 21 40))

