crates/parser/src/tests/snapshots/op_prec_right_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 244
expression: "(test[1], ast, ast_string)"
---
- 19 ^ 21 + 40
- Ok:
    nodes:
      - Expr:
          BinOp:
            sym: Add
            lhs:
              Expr:
                BinOp:
                  sym: Pow
                  lhs:
                    Expr:
                      Lit:
                        value:
                          UInt64: 19
                        ty: ~
                  rhs:
                    Expr:
                      Lit:
                        value:
                          UInt64: 21
                        ty: ~
                  ty: ~
            rhs:
              Expr:
                Lit:
                  value:
                    UInt64: 40
                  ty: ~
            ty: ~
- (+ (^ 19 21) 40)

