crates/parser/src/tests/snapshots/op_prec_right_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 251
expression: "(test[1], ast, ast_string)"
---
- 19 ** 21 ** 40 / 2
- Ok:
    nodes:
      - BinOp:
          op: Div
          lhs:
            BinOp:
              op: Pow
              lhs:
                Lit:
                  value:
                    UInt64: 19
              rhs:
                BinOp:
                  op: Pow
                  lhs:
                    Lit:
                      value:
                        UInt64: 21
                  rhs:
                    Lit:
                      value:
                        UInt64: 40
          rhs:
            Lit:
              value:
                UInt64: 2
- (/ (** 19 (** 21 40)) 2)

