crates/parser/src/tests/snapshots/parens_complex.snap
---
source: crates/parser/src/tests.rs
assertion_line: 258
expression: "(test[1], ast, ast_string)"
---
- 3 * ((19 + 21) - 5) / 40
- Ok:
    nodes:
      - node:
          BinOp:
            op: Div
            lhs:
              node:
                BinOp:
                  op: Mul
                  lhs:
                    node:
                      Lit:
                        value:
                          UInt64: 3
                  rhs:
                    node:
                      BinOp:
                        op: Sub
                        lhs:
                          node:
                            BinOp:
                              op: Add
                              lhs:
                                node:
                                  Lit:
                                    value:
                                      UInt64: 19
                              rhs:
                                node:
                                  Lit:
                                    value:
                                      UInt64: 21
                        rhs:
                          node:
                            Lit:
                              value:
                                UInt64: 5
            rhs:
              node:
                Lit:
                  value:
                    UInt64: 40
- (/ (* 3 (- (+ 19 21) 5)) 40)

