crates/parser/src/tests/snapshots/struct_attr_only.snap
---
source: crates/parser/src/tests.rs
assertion_line: 359
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n}\n"
- Ok:
    nodes:
      - Stmt:
          Struct:
            name: Foo
            fields:
              - Stmt:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - Stmt:
                  Let:
                    name: b
                    antn: Float
                    init:
                      Expr:
                        Lit:
                          value:
                            Float: 1.0
                          ty: ~
            methods: []
- "(struct Foo '((let a:int32) (let b:float 1)) '())"

